Update some links, align pictures, fix mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -85,40 +85,25 @@ h2 {
     font-family: Times, serif;
 }
 
-/* Container for the entire profile */
-.profile {
-    display: flex; /* Display the profile picture and info side by side */
-    align-items: center; /* Vertically center the content */
+iframe {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-/* Container for the profile picture */
-.profile-pic {
-    width: 50px; /* Set the desired width and height for the circular picture */
-    height: 50px;
-    border-radius: 50%; /* Make the container circular */
-    overflow: hidden; /* Hide the parts of the image outside the circle */
-    /* border: 1px solid #ccc; Add a border */
-    display: flex; /* Use flex display to center the image */
-    justify-content: center; /* Horizontally center the image */
-    align-items: center; /* Vertically center the image */
-    margin-right: 10px; /* Add some spacing between the picture and info */
+.article-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-/* Style for the image inside the circular container */
-.profile-pic img {
-    width: 100%;
-    height: auto;
-}
-
-/* Style for the profile information */
-.profile-info {
-    flex: 1; /* Allow the info to take remaining space */
-}
-
-/* Style for the profile name */
-.profile-name {
-    font-size: 18px;
-    margin: 0; /* Remove default margins */
+.displayimages {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 ul {
@@ -195,8 +180,10 @@ a:hover {
 
 .contribution {
     margin-top: 40px;
-    margin-left: 25%;
-    margin-right: 25%;
+    padding-left: 25%;
+    padding-right: 25%;
+    display: flex;
+    align-items: center;
 }
 
 .contribution p {
@@ -234,13 +221,35 @@ a:hover {
 }
 /* Media Query for Smaller Screens */
 @media (max-width: 768px) {
-    header {
-        padding: 0.5rem;
+    .article-header {
+        padding-left: 5%;
+        padding-right: 5%;
     }
 
-    /* Article Styles */
     .article {
         padding-left: 5%;
         padding-right: 5%;
+    }
+
+    .author {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    iframe {
+        width: 100%;
+    }
+
+    .contribution {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    .footer-content {
+        width: 90%;
+    }
+
+    .footer hr {
+        width: 90%;
     }
 }
